--- a/src/components/App/App.module.css
+++ b/src/components/App/App.module.css
@@ -2,7 +2,11 @@
   max-width: 1280px;
 }
 
+.section {
+  padding: 50px;
+}
+
 .title {
   font-size: 30px;
-  margin-bottom: 30px;
+  margin: 0 0 10px 0;
 }
