--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  font-size: 15px;
+  font-size: 16px;
   font-weight: 500;
-  width: 300px;
+  min-width: 300px;
   border: 1px solid #000000;
   border-radius: 6px;
   padding: 10px;
@@ -22,5 +22,5 @@
 }
 
 .contactDetails {
-  margin-left: 8px;
+  margin: 0 0 0 8px;
 }
